-------------------------------
Version 7.25 (29 August 2017)
-------------------------------
Once more a better explanation of '+' when $i is used.
Replaced tabs by four spaces.
Changed the order of ambiguous lemma when option -H1 applies: The lemma
that would survive pruning (-H0 option) is output first.

-------------------------------
Version 7.24 (23 August 2017)
-------------------------------
Better explanation of the value '+' when $i is used in -c or -W format
strings.

-------------------------------
Version 7.23 (7 August 2017)
-------------------------------
Delegated recognition of character references (&#nnn; or &#xhhh;) to
entities.cpp.

-------------------------------
Version 7.22 (3 August 2017)
-------------------------------
Delegated recognition of HTML entities to new file entities.cpp in the
letterfunc directory, for sharing code with other programs.
Fixed bug that made transformation of HTML entities a mess. 

-------------------------------
Version 7.21 (31 July 2017)
-------------------------------
Updated list of HTML entities. Fixed memory deallocation error in option.cpp.

-------------------------------
Version 7.20 (18 July 2017)
-------------------------------
Fixed recently (June 2017) introduced error that turned off lemmatisation by
rule application. 

-------------------------------
Version 7.19 (26 June 2017)
-------------------------------
Fixed bug that made use of long command lines unreliable.

-------------------------------
Version 7.18 (22 June 2017)
-------------------------------
Added tab character in screen display of -f option.
When lemmatising tagged input, program can now handle flexrule files of
different generations. 

-------------------------------
Version 7.17 (20 March 2017)
-------------------------------
If the same lemma is generated several times (by alternative decision trees),
then only the first instance is kept.

-------------------------------
Version 7.16 (15 March 2017)