@@ -4,7 +4,8 @@ Version 7.25 (29 August 2017)
 Once more a better explanation of '+' when $i is used.
 Replaced tabs by four spaces.
 Changed the order of ambiguous lemma when option -H1 applies: The lemma
-that would survive pruning (-H0 option) is output first.
+that would survive pruning (-H0 option) is output first. The << and >>
+around pruning candidates are not shown anymore.
 
 -------------------------------
 Version 7.24 (23 August 2017)
